# AlgorithmEngineering2022-2023

./: Answers3.docx  Answers4.docx  Answers6.docx
Answers/: Answers10.docx  Answers11.docx  Answers12.docx  Answers13.docx  Answers5.docx  Answers7.docx  Answers8.docx  Answers9.docx
Answers/Answers1/hello_simple/: CMakeLists.txt
Answers/Answers1/pi_monte_carlo/openmp_pi_montecarlo/: CMakeLists.txt  main.cpp
Answers/Answers1/pi_numerical_integration/: pi_numerical_integration.cpp
Answers/Answers2/omp_for_loop/: main.cpp
Project/ImageEnhancerProject/: CMakeLists.txt  in.ppm  main.cpp
Week1/pi_numerical_integration/: CMakeLists.txt
Week2/omp_for_loop/: CMakeLists.txt
